# coralcam

./: README.md  pyproject.toml  requirements.txt
coralcam/: __init__.py  coralcam.py
coralcam/gui/: __init__.py  main_window.py  start.py
coralcam/hardware/: camera.py  config.py  light.py  motor_TMC2209.py
