[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coralcam"
version = "0.1.0"
description = "A photogrammetry system for coral imaging."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Oscar", email = "ob266@cam.ac.uk"},
]
maintainers = [
    {name = "Oscar", email = "ob266@cam.ac.uk"},
]
keywords = ["camera", "raspberry-pi", "coral", "monitoring", "picamera2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Graphics :: Capture :: Digital Camera",
]

dependencies = [
    "gpiozero",
    "Rpi.GPIO",
    "pyserial",
    "picamera2",
    "libcamera",
    "rpi_hardware_pwm",
    "PyTmcStepper",
    "PyQt5",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
    "opencv-python>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/calcicodes/coralcam"  # Update with your actual URL
Repository = "https://github.com/calcicodes/coralcam.git"
Issues = "https://github.com/calcicodes/coralcam/issues"
Documentation = "https://github.com/calcicodes/coralcam/wiki"

[project.scripts]
coralcam = "coralcam.gui.app:main"
coralcam-gui = "coralcam.gui.app:main"

[tool.setuptools]
packages = ["coralcam"]

[tool.setuptools.package-data]
coralcam = ["*.yaml", "*.json", "*.cfg"]
